Fix YouTube Icon Width on mobile

--- a/themes/TheMindFulArtist/assets/css/app.css
+++ b/themes/TheMindFulArtist/assets/css/app.css
@@ -345,8 +345,8 @@ header .container {
 }
 
 #youtube-icon {
-  width: 90%;
   border-radius: 7px;
+  max-width: 90%;
 }
 
 /* ==========================================================================
